--- a/form.html
+++ b/form.html
@@ -24,7 +24,7 @@
   <main>
     <!-- begin form -->
     <div class="web-form">
-      <form class="needs-validation" novalidate>
+      <form class="needs-validation" data-netlify="true" novalidate>
         <div class="row">
           <!--First Name-->
           <div class="col-12 col-xxs-12 col-xs-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
