--- a/index.html
+++ b/index.html
@@ -36,26 +36,27 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="images/pexels-pixabay-164745.jpg" class="d-block w-100" alt="...">
+      <img src="images/image.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>First slide label</h5>
-        <p>Some representative placeholder content for the first slide.</p>
+        <h5>KarateKxds</h5>
+        <p>A Music Duo based in the US composed of Dxl4n and JaeSw</p>
       </div>
     </div>
     <div class="carousel-item">
       <!-- video goes here-->
        <div class="ratio ratio-16x9">
-       <video autoplay loop muted>
-       <source src="videos/2022395-hd_1920_1080_30fps.mp4" type="video/mp4" />
-       </video>
+        <img src="images/illkira.jpeg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>illkira</h5>
+          <p>Pop/Rap artist based in Las Vegas popular for songs such as "All My Fault" and "Just A Player"</p>
       </div>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="images/pexels-wendywei-1190297.jpg" class="d-block w-100" alt="...">
+      <img src="images/heyzujo!.png" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h5>Third slide label</h5>
-        <p>Some representative placeholder content for the third slide.</p>
+        <h5>heyzuko!</h5>
+        <p>Singer from Peth Australia, heyzuko! has had multiple radio spins as well as being signed to Mandatory Music</p>
       </div>
     </div>
   </div>
